--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,7 +170,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   margin: 0;
-  padding: 30px 0;
+  padding: 26px 0 30px;
 }
 .services-info {
   font-weight: 400;
@@ -257,17 +257,22 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
 }
 .catalog-filter-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  padding-bottom: 32px;
+  padding: 0;
+  padding-bottom: 33px;
 }
 .catalog-filter-item {
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
+  display: flex;
 }
 
 .counts-hotel {
@@ -278,6 +283,9 @@ body {
   min-height: 50px;
   display: flex;
   align-items: center;
+  flex-grow: 1;
+  max-width: 470px;
+  flex-wrap: wrap;
 }
 
 .hotel-card-link {
@@ -368,9 +376,13 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #aaaaaa;
-  margin-left: -35px;
+  margin-left: -36px;
   position: absolute;
   margin-top: 12px;
+}
+
+.control-price-max {
+  margin-left: -40px;
 }
 
 .control-input {
@@ -380,6 +392,8 @@ body {
   line-height: 24px;
   width: 20px;
   height: 20px;
+  border: 0;
+  margin: 0;
 }
 
 .blue-btn {
@@ -451,9 +465,10 @@ body {
   padding: 0;
   list-style: none;
   display: flex;
-  align-items: center;
+
   flex-wrap: wrap;
   max-width: 195px;
+  align-items: flex-start;
 }
 
 .navigation-menu {
@@ -525,6 +540,7 @@ body {
   list-style: none;
   flex-direction: column;
   gap: 16px;
+  padding-bottom: 36px;
 }
 
 .catalog-filter-infrastructure {
@@ -532,7 +548,7 @@ body {
 }
 
 .catalog-filter-type {
-  margin-right: 150px;
+  margin-right: 151px;
 }
 .logo-container {
   display: flex;
@@ -549,12 +565,12 @@ body {
 
 .submit-button {
   padding: 8px 50px;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
   border-radius: 4px;
 }
 
 .reset-button {
-  padding: 8px 50px 25px;
+  padding: 6px 50px;
   border-radius: 4px;
   background: none;
 }
@@ -588,12 +604,26 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .container-hero-img {
   margin-top: -34px;
 }
 
+.white-vector {
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.main-img-wrapper {
+  width: 75px;
+  height: 76px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .sedona-info {
   margin: 0;
   padding-bottom: 25px;
@@ -744,21 +774,33 @@ body {
 
 .hotels-filter-title {
   margin: 0;
-  padding: 0 0 8px 0;
+  padding: 0 0 5px 0;
 }
 
 .breadcrumbs {
   margin: 0;
-  padding: 0 0 40px;
+  padding: 0 0 38px;
   list-style: none;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   gap: 10px;
 }
+.breadcrumbs-item:not(:first-child) {
+  padding-left: 18px;
+  display: flex;
+}
+.breadcrumbs-item:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  background: url("../images/breadcrumbs.svg") no-repeat;
+  width: 8px;
+  height: 20px;
+  transform: translate(-17px, 0);
+}
 
 .hotels-filter-wrapper {
-  padding: 35px 70px 70px;
+  padding: 35px 70px 36px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -766,22 +808,32 @@ body {
 .hotel-sorting {
   display: flex;
   align-items: flex-start;
-  padding: 50px 70px 40px;
+  padding: 50px 70px 38px;
   justify-content: space-between;
+}
+.catalog-item-price {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
 }
 
 .select-control {
-  padding: 10px 90px 11px 15px;
+  padding: 10px 50px 11px 18px;
   border-color: #e5e5e5;
   border-radius: 4px;
   border-width: 2px;
   min-height: 50px;
   display: flex;
   align-items: center;
+  width: 292px;
+  margin-left: -2px;
 }
 
 .control {
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 23px;
 }
 
 .hotel-list {
@@ -791,6 +843,17 @@ body {
   margin: 0 0 78px;
   padding: 0 70px;
   grid-gap: 20px;
+  row-gap: 18px;
+  position: relative;
+}
+.hotel-list::before {
+  content: "";
+  position: absolute;
+  width: 1060px;
+  border-bottom: 1px solid #e6e6e6;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .hotel-card-container {
@@ -807,7 +870,7 @@ body {
 }
 
 .pagination {
-  margin: 40px 70px 60px 70px;
+  margin: 40px 70px 61px 70px;
 }
 
 .pagination-list {
@@ -888,7 +951,7 @@ body {
 .price-wrapper {
   display: flex;
   flex-direction: row;
-  gap: 2px;
+  gap: 3px;
 }
 
 .control-input-price-min {
@@ -896,14 +959,22 @@ body {
   height: 48px;
   border: none;
   border-radius: 4px 0 0 4px;
-  padding-left: 20px;
+  padding: 4px 38px 4px 20px;
 }
 .control-input-price-max {
   width: 143px;
   height: 48px;
   border: none;
   border-radius: 0 4px 4px 0;
-  padding-left: 20px;
+  padding: 4px 38px 4px 19px;
+}
+
+.control-input-price-min::placeholder {
+  color: #000000;
+}
+
+.control-input-price-max::placeholder {
+  color: #000000;
 }
 
 .type-cards-item {
@@ -915,10 +986,6 @@ body {
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-}
-
-.type-cards-active {
-  border-color: #000000;
 }
 
 .type-cards-container {
@@ -974,4 +1041,374 @@ body {
 .numb-stars {
   display: flex;
   align-items: center;
+}
+
+.control-radio {
+  position: relative;
+  padding-left: 36px;
+}
+.control-radio::after {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+}
+
+.control-radio::before {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #3f5e72;
+  border-radius: 50%;
+  background-position: center;
+  left: 5px;
+  top: 5px;
+  z-index: 1;
+  opacity: 0;
+}
+
+.control-input:checked + .control-radio::before {
+  opacity: 1;
+}
+
+.control-checkbox {
+  position: relative;
+  padding-left: 36px;
+}
+.control-checkbox::after {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 4px;
+  left: 0;
+  top: 0;
+}
+
+.control-checkbox::before {
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 10px;
+  background: url("../images/icon-check.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  left: 5px;
+  top: 5px;
+  z-index: 1;
+  opacity: 0;
+}
+
+.control-input:checked + .control-checkbox::before {
+  opacity: 1;
+}
+
+.navigation-link-btn:hover {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.navigation-link-btn:focus {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.navigation-link-btn:active {
+  background-color: #756157;
+  color: #9e9089;
+  transition: 0.2s;
+}
+.navigation-link-btn:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.hotel-search-btn:hover {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.hotel-search-btn:focus {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.hotel-search-btn:active {
+  background-color: #756157;
+  color: #9e9089;
+  transition: 0.2s;
+}
+.hotel-search-btn:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.hotel-card-button:hover {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.hotel-card-button:focus {
+  background-color: #615048;
+  transition: 0.2s;
+}
+
+.hotel-card-button:active {
+  background-color: #756157;
+  color: #9e9089;
+  transition: 0.2s;
+}
+
+.hotel-card-button:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+.newsletter-form-btn:hover {
+  background-color: #68a2ca;
+  transition: 0.2s;
+}
+
+.newsletter-form-btn:focus {
+  background-color: #68a2ca;
+  transition: 0.2s;
+}
+
+.newsletter-form-btn:active {
+  background-color: #82b3d3;
+  color: #a7cae0;
+  transition: 0.2s;
+}
+
+.hotel-card-button:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.blue-btn:hover {
+  background-color: #68a2ca;
+  transition: 0.2s;
+}
+
+.blue-btn:focus {
+  background-color: #68a2ca;
+  transition: 0.2s;
+}
+
+.blue-btn:active {
+  background-color: #82b3d3;
+  color: #a7cae0;
+  transition: 0.2s;
+}
+
+.blue-btn:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.btn-favorite:hover {
+  background-color: #6c9e42;
+  transition: 0.2s;
+}
+
+.btn-favorite:focus {
+  background-color: #6c9e42;
+  transition: 0.2s;
+}
+
+.btn-favorite:active {
+  background-color: #7db54f;
+  color: #a4cb83;
+  transition: 0.2s;
+}
+
+.btn-favorite:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.type-cards-item:hover {
+  border-color: #000000;
+  transition: 0.2s;
+}
+
+.type-cards-item:focus {
+  border-color: #68a2ca;
+  transition: 0.2s;
+  outline: none;
+}
+
+.type-cards-item:active {
+  border-color: #000000;
+  transition: 0.2s;
+}
+
+.select-control {
+  background-image: url("../images/icon-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 93% 50%;
+}
+
+.logo-html path {
+  fill: #000000;
+}
+
+.logo-html:hover path {
+  fill: #756157;
+  transition: 0.2s;
+}
+
+.logo-html:focus path {
+  fill: #756157;
+  transition: 0.2s;
+}
+
+.logo-html:active path {
+  fill: #d6d0cd;
+  transition: 0.2s;
+}
+
+.footer-icon:hover path {
+  fill: #68a2ca;
+  transition: 0.2s;
+}
+
+.footer-icon:focus path {
+  fill: #68a2ca;
+  transition: 0.2s;
+}
+
+.footer-icon:active path {
+  fill: #d2e4f0;
+  transition: 0.2s;
+}
+
+.footer-contacts-address-phone:hover {
+  color: #756157;
+  transition: 0.2s;
+}
+
+.footer-contacts-address-phone:focus {
+  color: #756157;
+  transition: 0.2s;
+}
+
+.footer-contacts-address-phone:active {
+  color: #d6d0cd;
+  transition: 0.2s;
+}
+
+.price-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.slider-container {
+  cursor: pointer;
+}
+
+.control-input-price-min:not(:placeholder-shown) {
+  border: 3px solid black;
+  transition: 0.2s;
+  outline: none;
+}
+
+.control-input-price-max:not(:placeholder-shown) {
+  border: 3px solid black;
+  transition: 0.2s;
+  outline: none;
+}
+
+.control-input-price-min:focus {
+  outline: 3px solid #82b3d3;
+  transition: 0.2s;
+}
+
+.control-input-price-max:focus {
+  outline: 3px solid #82b3d3;
+  transition: 0.2s;
+}
+
+.select-control:hover {
+  border-color: #68a2ca;
+  transition: 0.2s;
+}
+
+.select-control:focus {
+  border-color: #68a2ca;
+  transition: 0.2s;
+  outline: none;
+}
+
+.select-control:disabled {
+  border-color: #b3b3b3;
+  transition: 0.2s;
+}
+
+.reset-button {
+  border: 3px solid transparent;
+}
+.reset-button:hover {
+  color: #b5c3c6;
+}
+
+.reset-button:focus {
+  border: 3px solid #68a2ca;
+  transition: 0.2s;
+  outline: none;
+}
+.reset-button:active {
+  color: #73837b;
+}
+.reset-button:disabled {
+  opacity: 0.2;
+}
+
+.field:hover {
+  background-color: #e6e6e6;
+  transition: 0.2s;
+}
+.field:focus {
+  outline: 3px solid #82b3d3;
+  transition: 0.2s;
+}
+.field:not(:placeholder-shown) {
+  border: 2px solid black;
+  transition: 0.2s;
+  outline: none;
+}
+.breadcrumbs-link:hover {
+  opacity: 0.6;
+}
+
+.breadcrumbs-link:focus {
+  color: white;
+}
+.breadcrumbs-link:active {
+  opacity: 0.35;
+}
+
+.catalog-filter-item:hover > .control-checkbox::after {
+  background-color: #cfdde9;
+  transition: 0.2s;
+}
+
+.catalog-filter-item:focus > .control-checkbox::after {
+  outline: 3px solid #82b3d3;
+  transition: 0.2s;
 }
